--- a/scss/app.scss
+++ b/scss/app.scss
@@ -248,8 +248,12 @@ input[disabled="disabled"], input[disabled="disabled"]:hover {
   width: 70px;
   display: inline-block;
   margin: 0 .3em;
-  border: 1px solid rgb(28, 33, 37);
-  border-radius: 4px;
+  box-shadow: 0 3px 3px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  border-radius: 2px;
+
+  &:hover {
+    background: $keyboard-color;
+  }
 }
 
 .app__popup-msg {
