--- a/scss/app.scss
+++ b/scss/app.scss
@@ -263,3 +263,12 @@ input[disabled="disabled"], input[disabled="disabled"]:hover {
   padding-top: 1em;
   font-size: .9em;
 }
+
+.app__device-unplugged {
+  display: none;
+  text-align: center;
+  color: white;
+  font-size: 1.3em;
+  padding-top: 40vh;
+  box-sizing: border-box;
+}
